Added my project

--- a/index.html
+++ b/index.html
@@ -61,5 +61,110 @@
         <button class="btn">Donate Now</button>
       </div>
     </div>
+    <div class="donate__plan">
+      <div class="donate__content">
+        <h1>Our Donate Plan</h1>
+        <p>
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli <br />
+          deterruisset. No duo populo animal noluisse, enim
+        </p>
+      </div>
+    </div>
+    <div class="donate__plan-card">
+      <div class="donate__single-card first__card">
+        <img src="./icons/food.png" alt="food" />
+        <h1>Food for a family</h1>
+        <p>
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit.
+        </p>
+      </div>
+      <div class="donate__single-card secound__card">
+        <img src="./icons/shelter.png" alt="shelter" />
+        <h1>Shelter for a family</h1>
+        <p>
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit.
+        </p>
+      </div>
+      <div class="donate__single-card third__card">
+        <img src="./icons/Frame-1.png" alt="Frame" />
+        <h1>Education for a child</h1>
+        <p>
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit.
+        </p>
+      </div>
+    </div>
+    <div class="contribute__section">
+      <div class="contribute__content">
+        <h1>Their lives depend on your donation</h1>
+        <p>
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli deterruisset. No duo populo animal noluisse, enim
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli deterruisset.
+        </p>
+        <button class="btn contribute__btn">How to Contribute?</button>
+      </div>
+      <div class="contribute__ing">
+        <img src="./images/Mask group.png" alt="" />
+      </div>
+    </div>
+    <div class="contribute__section">
+      <div class="contribute__ing">
+        <img src="./images/Rectangle 245.png" alt="" />
+      </div>
+      <div class="contribute__content">
+        <h1>They need us to suvive</h1>
+        <p>
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli deterruisset. No duo populo animal noluisse, enim
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli deterruisset.
+        </p>
+        <button class="btn contribute__btn">How to Contribute?</button>
+      </div>
+    </div>
+
+    <div class="our__brand">
+      <div class="our__brand-content">
+        <h1>Our Brand Partner</h1>
+      </div>
+      <div class="brand__img">
+        <img src="./icons/google.png" alt="google" />
+        <img src="./icons/dropbox.png" alt="dropbox" />
+        <img src="./icons/slack.png" alt="slack" />
+        <img src="./icons/shopify.png" alt="shopify" />
+      </div>
+    </div>
+
+    <div class="donate__plan">
+      <div class="donate__content">
+        <h1>Get My Updates</h1>
+        <p>
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli <br />
+          deterruisset. No duo populo animal noluisse, enim
+        </p>
+      </div>
+    </div>
+    <div class="newsletter__section">
+      <div class="email__input">
+        <input type="email" placeholder="Email" />
+      </div>
+      <div class="subscribe__btn">
+        <button>Subscribe</button>
+      </div>
+    </div>
+    <div class="footer">
+      <h1>Be Humble</h1>
+      <span>I’m gonna do it</span>
+    </div>
   </body>
 </html>
